MathGameTest, agregar test unitarios y fx para implementar despues